tests/syntax_error/unknown_escape_multibyte.jou
def main() -> int:
    # This error message doesn't mention the character being escaped, because
    # it is not ASCII and it actually consists of two bytes. The tokenizer
    # only sees the first byte when it errors.
    return '\รถ'  # Error: unknown '\' escape
